--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="utf-8"/>
 <title>Visualization of the Retweeted Network After the Fukushima Daiichi Nuclear Power Plant Accident</title>
+<meta name="description" content="This is an interactive demo of the visualization result in our paper entitled &quot;Twitter use in scientific communication revealed by visualization of information spreading by influencers within half a year after the Fukushima Daiichi nuclear power plant accident&quot;.">
+<meta property="og:title" content="Visualization of the Retweeted Network After the Fukushima Daiichi Nuclear Power Plant Accident">
+<meta property="og:description" content="This is an interactive demo of the visualization result in our paper entitled &quot;Twitter use in scientific communication revealed by visualization of information spreading by influencers within half a year after the Fukushima Daiichi nuclear power plant accident&quot;.">
+<meta property="og:url" content="https://likr.github.io/twitter-analysis2018">
+<meta name="twitter:card" content="summary">
 <link rel="stylesheet" href="vendor/bulma.css">
 <style>
 eg-renderer-ogdf {
